# projectloupe

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/burst-detection/: Cargo.toml
crates/burst-detection/examples/: test_import.rs
crates/burst-detection/src/: burst.rs  exif.rs  lib.rs  quality.rs
crates/session-db/: Cargo.toml
crates/session-db/src/: lib.rs
crates/thumbnail-cache/: Cargo.toml
crates/thumbnail-cache/src/: cache.rs  generate.rs  lib.rs  lru.rs  prefetch.rs
docs/: install-unsigned-macos.md
public/: import-payload.json  test-data.json
scripts/: build-import-payload.mjs  export-test-data.sh
specs/: baseline-test-results.md  burst-expand-behavior.md  projectloupe-cache-architecture.md  projectloupe-interaction-patterns.md  projectloupe.md  refactor-normalized-store.md  refactor-test-plan.md  xmp-export.md
specs/research/: photo-culler-competitive.md  photo-culler-questionnaire.md  photo-culler-tech-feasibility.md  projectloupe-ui-research.md
specs/ui-terminology/: README.md
src/: App.css  App.tsx  image_info.rs  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: burst.rs  lib.rs  main.rs
src/components/: BurstGroup.css  BurstGroup.tsx  CommandPalette.css  CommandPalette.tsx  FilterBar.css  FilterBar.tsx  IngestPanel.css  IngestPanel.tsx  LoupeView.css  LoupeView.tsx  MetadataPanel.css  MetadataPanel.tsx  StatusBar.css  StatusBar.tsx  ThumbnailCard.css  ThumbnailCard.tsx  ThumbnailGrid.css  ThumbnailGrid.tsx
src/mock/: generateMockData.ts
src/stores/: imageStore.ts  selectors.ts
src/stores/__tests__/: imageStore.test.ts  reviewMode.test.ts
src/styles/: global.css  theme.css
src/types/: index.ts
test-xmps/: Z6A_4730.xmp  Z6A_4731.xmp  Z6A_4732.xmp  Z6A_4733.xmp  Z6A_4734.xmp  Z6A_4735.xmp  Z6A_4736.xmp  Z6A_4737.xmp
