[package]
name = "projectloupe"
version = "0.1.0"
description = "AI-powered photo culling app for professional photographers"
authors = ["ProjectLoupe Team"]
license = "MIT"
repository = "https://github.com/murraycb/projectloupe"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

# Existing ProjectLoupe dependencies
rexif = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"