[package]
name = "projectloupe"
version = "0.1.0"
description = "AI-powered photo culling app for professional photographers"
authors = ["ProjectLoupe Team"]
license = "MIT"
repository = "https://github.com/murraycb/projectloupe"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Workspace dependencies
anyhow = { workspace = true }
tokio = { workspace = true }

# Local crates
burst-detection = { path = "../crates/burst-detection" }
dirs = "6.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
