[package]
name = "burst-detection"
version = "0.1.0"
description = "Burst detection and image quality analysis for ProjectLoupe"
authors = ["ProjectLoupe Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"