[package]
name = "session-db"
version = "0.1.0"
edition = "2021"
description = "SQLite persistence layer for ProjectLoupe sessions"

[dev-dependencies]
tempfile = "3"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = "6.0"
