[package]
name = "thumbnail-cache"
version = "0.1.0"
description = "High-performance thumbnail generation and caching for ProjectLoupe"
authors = ["ProjectLoupe Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
image = "0.25"
lru = "0.12"
sha2 = "0.10"
dirs = "6.0"
parking_lot = "0.12"
hex = "0.4"
tempfile = "3.8"
burst-detection = { path = "../burst-detection" }

[dev-dependencies]
tempfile = "3.8"